roman numeral solved

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <button id="button">Click</button>
-    <script src="./isPalindrome.js"></script>
+    <script src="./romanInt.js"></script>
   </body>
 </html>
